--- a/.github/workflows/scc.yml
+++ b/.github/workflows/scc.yml
@@ -14,10 +14,10 @@ on:
 jobs:
   scc:
     runs-on: ubuntu-latest
-    name: 'Complexity and SLOC'
+    name: 'Complexity and SLOC generation'
     steps:
-      # - name: Checkout
-      #   uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Generate complexity metrics (using Adapt-API action)
         id: scc
