--- a/.github/workflows/sonarqube-internal-repo.yml
+++ b/.github/workflows/sonarqube-internal-repo.yml
@@ -14,17 +14,17 @@ on:
     #     default: false
     
 jobs:
-  echo-inputs:
-    name: 'Echo inputs'
-    runs-on: ubuntu-latest
-    steps:
-    - name: Echo inputs
-      run: |
-        echo "Sonarqube scan for INTERNAL repositories, running on ubuntu-latest-4-cores runner"
-        echo "Sonar host URL ${{ vars.SONAR_HOST_URL}}"
-  #       echo "Skip unit tests set to ${{ inputs.skip-unit-tests }}"
+  # echo-inputs:
+  #   name: 'Echo inputs'
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - name: Echo inputs
+  #     run: |
+  #       echo "Sonarqube scan for INTERNAL repositories, running on ubuntu-latest-4-cores runner"
+  #       echo "Sonar host URL ${{ secrets.SONAR_HOST_URL}}"
+  # #       echo "Skip unit tests set to ${{ inputs.skip-unit-tests }}"
   
-  sonarqube:
+  SonarQube:
     runs-on: ubuntu-latest-4-cores
     steps:
     # unit-tests:
@@ -59,4 +59,4 @@ jobs:
       continue-on-error: true
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        SONAR_HOST_URL: ${{ vars.SONAR_HOST_URL }}    
+        SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}    
