--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -145,8 +145,9 @@ jobs:
           srm_url: ${{ secrets.BLACKDUCK_SBOM_URL }}  # SRM_URL
           srm_apikey: ${{ secrets.BLACKDUCK_SBOM_API_KEY }}  # SRM_API_KEY
           srm_assessment_types: "SCA,SAST"
-          ### SCANNING: Optional fields
-          # srm_project_name: ${{ vars.PROJECT_NAME }}
+          ### SCANNING: Optional fields from https://documentation.blackduck.com/bundle/bridge/page/documentation/c_github-srm.html
+          srm_project_name: ${{ github.event.repository.name }}
+          #### srm_auto_create_project: true
           # srm_project_id: ${{ vars.PROJECT_ID }}
           # srm_branch_name: ${{ vars.BRANCH_NAME }}
           # srm_branch_parent: ${{ vars.BRANCH_PARENT }}
@@ -154,6 +155,9 @@ jobs:
           # detect_execution_path: ${{ vars.DETECT_EXECUTION_PATH }}
           # coverity_execution_path: ${{ vars.COVERITY_EXECUTION_PATH }}    
           # project_directory: ${{ vars.PROJECT_DIRECTORY }}
+
+          # auto-create-project	Whether SRM should automatically create a project with the given project-name if it does not yet exist.	false	No[2]
+
 
 ######################################################
 # original from https://github.com/progress-platform-services/common-github-actions/blob/main/.github/workflows/examples/ci-all-sbom-main.yml
