--- a/.github/workflows/blackduck-polaris.yml
+++ b/.github/workflows/blackduck-polaris.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
       - name: Starting Black Duck Polaris scan
         run: |
-          echo "POLARIS_SERVER_URL: ${{ vars.POLARIS_SERVER_URL }}"
+          echo "POLARIS_SERVER_URL: ${{ secrets.POLARIS_SERVER_URL }}"
         # echo "POLARIS_ACCESS_TOKEN: ${{ secrets.POLARIS_ACCESS_TOKEN }}"
       # - name: Checkout Source
       #   uses: actions/checkout@v4
@@ -25,7 +25,7 @@ jobs:
         uses: blackduck-inc/black-duck-security-scan@v2.1.1
         with:
           ### SCANNING: Required fields
-          polaris_server_url: ${{ vars.POLARIS_SERVER_URL }} # https://polaris.blackduck.com
+          polaris_server_url: ${{ secrets.POLARIS_SERVER_URL }} # https://polaris.blackduck.com
           polaris_access_token: ${{ secrets.POLARIS_ACCESS_TOKEN }}
           polaris_assessment_types: "SCA,SAST"
           
