--- a/workflow-supporting-files/sonar-templates/RUBY-sonar-project.properties
+++ b/workflow-supporting-files/sonar-templates/RUBY-sonar-project.properties
@@ -1,6 +1,6 @@
 # SonarQube configuration file
 # properties defined in https://docs.sonarsource.com/sonarqube-server/latest/analyzing-source-code/analysis-parameters/
-# view output of main here https://sonar.progress.com/dashboard?id=chef_license_scout_db7f1a39-acd3-4376-9acf-80c93b9c01e2&codeScope=overall
+# view output of main here <ADD your URL like https://sonar.progress.com/dashboard?id=chef_license_scout_db7f1a39-acd3-4376-9acf-80c93b9c01e2&codeScope=overall>
 
 # Required metadata
 sonar.projectKey=chef_license_scout_db7f1a39-acd3-4376-9acf-80c93b9c01e2
@@ -11,19 +11,20 @@ sonar.projectName=license-scout
 # Language - https://docs.sonarsource.com/sonarqube-server/latest/analyzing-source-code/languages/overview/ go, ruby, rust
 sonar.language=ruby
 # sonar.sources=lib <-- for Ruby, match this with the /spec directory for tests & SARIF output directory for test results/rcov
-sonar.sources=.
+sonar.sources=lib
 # sonar.exclusions=**/*_test.go, **/*.js, **/*.sql, **/*.yml, **/*.yaml
 
 # Unit tests
-# sonar.tests=. spec?
+# sonar.tests=spec/**/*.rb 
 # sonar.test.inclusions=**/*_test.go **/*Test.java
 # sonar.go.coverage.reportPaths=., test/coverage/coverage.out
 # sonar.externalIssuesReportPaths	Comma-delimited list of paths to generic issue reports. 
 # sonar.sarifReportPaths	Comma-delimited list of paths to SARIF issue reports.
 # sonar.ruby.rubocop.reportPaths=./rubocop-report.json -- import Ruby Rubocop
+# sonar.dependencyCheck.htmlReportPath=./dependency-check-report.html -- import OWASP dependency check report
 
 # Additional settings
-sonar.qualitygate.wait=false
+# sonar.qualitygate.wait=false
 # sonar.qualitygate.timeout=300
 
 # skip C-language processor
