--- a/.github/workflows/stubs/ci-main-pull-request-stub.yml
+++ b/.github/workflows/stubs/ci-main-pull-request-stub.yml
@@ -1,5 +1,7 @@
 # stub to call common GitHub Action (GA) as part of Continuous Integration (CI) Pull Request process checks for main branch
 # inputs are described in the <org>/common-github-actions/<GA.yml> with same name as this stub
+#
+# version 2
 
 name: CI Pull Request on Main Branch
 
@@ -13,7 +15,7 @@ on:
 
 jobs: 
   call-ci-main-pr-check-pipeline:
-    uses: chef/common-github-actions/.github/workflows/ci-main-pull-request-v2.yml@main
+    uses: chef/common-github-actions/.github/workflows/ci-main-pull-request.yml@main
     secrets: inherit
     with:   # named inputs for the GA
       language: 'Ruby'  # optional, defaults to Go; other values are Ruby, Rust
