--- a/workflow-supporting-files/sonar-templates/RUBY-sonar-project.properties
+++ b/workflow-supporting-files/sonar-templates/RUBY-sonar-project.properties
@@ -1,27 +1,35 @@
 # SonarQube configuration file
+#
+# Sample Ruby Sonar file - https://docs.sonarsource.com/sonarqube-server/10.6/analyzing-source-code/languages/ruby/
 # properties defined in https://docs.sonarsource.com/sonarqube-server/latest/analyzing-source-code/analysis-parameters/
-# view output of main here <ADD your URL like https://sonar.progress.com/dashboard?id=chef_license_scout_db7f1a39-acd3-4376-9acf-80c93b9c01e2&codeScope=overall>
+#
+# view this repo in sonar: <ADD your URL like https://sonar.progress.com/dashboard?id=chef_...3b9c01e2&codeScope=overall>
 
 # Required metadata
-sonar.projectKey=chef_license_scout_db7f1a39-acd3-4376-9acf-80c93b9c01e2
-sonar.projectName=license-scout
+sonar.projectKey=chef_...3b9c01e2
+# example project name: chef/cehf-vault repo would be Chef_Chef_Infra_Client_chef-vault
+sonar.projectName=chef_app_repo
 # sonar.projectVersion=1.0
 # sonar.projectDescription=
 
 # Language - https://docs.sonarsource.com/sonarqube-server/latest/analyzing-source-code/languages/overview/ go, ruby, rust
 sonar.language=ruby
-# sonar.sources=lib <-- for Ruby, match this with the /spec directory for tests & SARIF output directory for test results/rcov
 sonar.sources=lib
-# sonar.exclusions=**/*_test.go, **/*.js, **/*.sql, **/*.yml, **/*.yaml
+# sonar.sources=lib <-- for Ruby, match this with the /spec directory for tests & SARIF output directory for test results/rcov
+# sonar.exclusions=**/*_test.go, **/*.js, **/*.sql, **/*.yml, **/*.yaml; may exclude **/vendor/** for Ruby
 
 # Unit tests
-# sonar.tests=spec/**/*.rb 
+sonar.tests=spec/**/*.rb 
 # sonar.test.inclusions=**/*_test.go **/*Test.java
-# sonar.go.coverage.reportPaths=., test/coverage/coverage.out
-# sonar.externalIssuesReportPaths	Comma-delimited list of paths to generic issue reports. 
-# sonar.sarifReportPaths	Comma-delimited list of paths to SARIF issue reports.
+# Coverage report
+sonar.ruby.coverage.framework=RSpec
+sonar.ruby.coverage.reportPaths=coverage/coverage.json 
+# ^^^ comma-delimited paths to Rubocop reports, SimpleCov, or RSpec plugin reports (coverage/coverage.json <-- default output for simpleCov)
+
 # sonar.ruby.rubocop.reportPaths=./rubocop-report.json -- import Ruby Rubocop
 # sonar.dependencyCheck.htmlReportPath=./dependency-check-report.html -- import OWASP dependency check report
+# sonar.externalIssuesReportPaths	Comma-delimited list of paths to generic issue reports. 
+# sonar.sarifReportPaths	Comma-delimited list of paths to SARIF issue reports.
 
 # Additional settings
 # sonar.qualitygate.wait=false
