--- a/workflow-supporting-files/sonar-templates/GO-sonar-project.properties
+++ b/workflow-supporting-files/sonar-templates/GO-sonar-project.properties
@@ -5,7 +5,10 @@
 
 # Required metadata
 sonar.projectKey=progress-platform-services_chef-node-enrollment-api_AY04FNeE_50_odbCDIY-
-sonar.projectName=Chef_Chef-Courier_chef-node-enrollment-api
+# project name is 3 parts: "Chef" + "<area/product>" + "<repo>" with underscores between
+# <area/product> choices: Chef-Agents | Chef-Automate | Chef360 | Chef-Habitat | Chef-Infra-Server | Chef-Shared-Services
+# example project name: progress-platform-service/chef-node-enrollment-api repo would be Chef_Chef360_chef-node-enrollment-api
+sonar.projectName=chef_app_repo
 # sonar.projectVersion=1.0
 # sonar.projectDescription=
 
