--- a/workflow-supporting-files/sonar-templates/RUBY-sonar-project.properties
+++ b/workflow-supporting-files/sonar-templates/RUBY-sonar-project.properties
@@ -7,7 +7,9 @@
 
 # Required metadata
 sonar.projectKey=chef_...3b9c01e2
-# example project name: chef/cehf-vault repo would be Chef_Chef_Infra_Client_chef-vault
+# project name is 3 parts: "Chef" + "<area/product>" + "<repo>" with underscores between
+# <area/product> choices: Chef-Agents | Chef-Automate | Chef360 | Chef-Habitat | Chef-Infra-Server | Chef-Shared-Services
+# example project name: chef/chef-vault repo would be Chef_Chef-Infra-Client_chef-vault
 sonar.projectName=chef_app_repo
 # sonar.projectVersion=1.0
 # sonar.projectDescription=
