--- a/.github/workflows/stubs/ci-main-pull-request-stub.yml
+++ b/.github/workflows/stubs/ci-main-pull-request-stub.yml
@@ -16,7 +16,7 @@ on:
   workflow_dispatch:
 
 env:
-  STUB_VERSION: "1.0.0" # TODO: update this to the version of the stub
+  STUB_VERSION: "1.0.0" 
 
 jobs: 
   echo_inputs:
