--- a/.github/workflows/ci-main-pull-request.yml
+++ b/.github/workflows/ci-main-pull-request.yml
@@ -15,7 +15,6 @@
 # 
 # https://docs.github.com/en/actions/sharing-automations/reusing-workflows#passing-inputs-and-secrets-to-a-reusable-workflow
 #
-# version 2
 
 name: CI flow containing PR checks for main & release, v2
 
@@ -142,6 +141,41 @@ on:
         required: false
         type: string
         default: 'github.com/progress-platform-services/*'
+      package-binaries:
+        description: 'Package binaries (e.g., RPM, DEB, MSI, dpkg + signing + SHA)'
+        required: false
+        type: boolean
+        default: true
+      habitat-build:
+        description: 'Create Habitat packages'
+        required: false
+        type: boolean
+        default: true
+      publish-packages:
+        description: 'Publish packages (e.g., container from Dockerfile to ECR, go-releaser binary to releases page, omnibus to artifactory, gems, choco, homebrew, other app stores)'
+        required: false
+        type: boolean
+        default: true
+      export-github-sbom:
+        description: 'Export SBOM to GitHub'
+        required: false
+        type: boolean
+        default: true
+      generate-blackduck-polaris-sbom:
+        description: 'Generate SBOM using BlackDuck polaris'
+        required: false
+        type: boolean
+        default: true 
+      generate-msft-sbom:
+        description: 'Generate SBOM using MSFT tools'
+        required: false
+        type: boolean
+        default: true
+      license_scout:
+        description: 'Run license scout for license compliance'
+        required: false
+        type: boolean
+        default: true
       udf1:
         description: 'User defined flag 1'
         required: false
@@ -161,14 +195,15 @@ on:
 env:
   REPO_VISIBILITY: ${{ github.event.repository.visibility }}
   REPO_NAME: ${{ github.event.repository.name }}
-  PIPELINE_VERSION: '1.0.0'
+  PIPELINE_VERSION: '1.0.1'
 
 jobs:
-  echo-inputs:
-    name: 'Echo version of pipeline and inputs'
+  precompilation-checks:
+    name: 'Pre-compilation checks'
+    if: ${{ inputs.perform-complexity-checks == true }}
     runs-on: ubuntu-latest
     steps:
-      - name: echo version of pipeline and inputs
+      - name: 'Echo version of pipeline and inputs'
         run: |
           echo "pipeline version $PIPELINE_VERSION"
           echo "Language set to ${{ inputs.language }} "
@@ -191,69 +226,42 @@ jobs:
           echo "Generate SBOM set to ${{ inputs.generate-sbom }}"
         # echo "The job_id is: $GITHUB_JOB"   
         # echo ${{ secrets.GITHUB_TOKEN }} DO NOT DO THIS
-          
-  ################################################################################################################
-  #
-  #    pre-compilation steps
-  #
-  ################################################################################################################
-  
-  # check out action
-  checkout:
-    name: 'Checkout'
-    runs-on: ubuntu-latest
-    steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-  # generate complexity metrics
-  run-scc:
-    if: ${{ inputs.perform-complexity-checks == true }}
-    uses: chef/common-github-actions/.github/workflows/scc.yml@main
-    with:
-      outputfilename: ${{ inputs.scc-output-filename }}
-    needs: echo-inputs
+      - name: 'Source code complexity checks'
+        if: ${{ inputs.perform-complexity-checks == true }}
+        uses: chef/common-github-actions/.github/workflows/scc.yml@main
+        with:
+          outputfilename: ${{ inputs.scc-output-filename }}
 
-  # language specific tests (gosec, rubocop, linters, etc.)
-  rust-language-specific-precompilation-checks:
-    name: 'Rust-specific pre-compilation steps'  
-    if: ${{ inputs.language == 'Rust' && inputs.perform-complexity-checks == true }}
-    runs-on: ubuntu-latest
-    needs: run-scc
-    steps:
-      - name: Run crate linter
+      # language specific tests (gosec, rubocop, linters, etc.)
+      - name: 'Rust-specific pre-compilation steps and linting'  
+        if: ${{ inputs.language == 'Rust' && inputs.perform-complexity-checks == true }}
         run: echo 'crate linter'
         # https://github.com/rust-lang/rust-clippy
         # cargo clippy --all-targets --all-features -- -D warnings
-
-  ruby-language-specific-precompilation-checks:
-    name: 'Ruby-specific pre-compilation steps'  
-    if: ${{ inputs.language == 'Ruby' && inputs.perform-complexity-checks == true }}
-    needs: run-scc
-    # TODO: get with Marc/Prajakta on this sequece for Ruby uses: chef/common-github-actions/.github/workflows/rubocop.yml@main
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: ruby/setup-ruby@v1
+      - name: 'Ruby-specific pre-compilation steps and linting'  
+        if: ${{ inputs.language == 'Ruby' && inputs.perform-complexity-checks == true }}
+        uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.4'
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
       # generate gemfile.lock (TODO: move this below to OWASP)
       - run: bundle install
       - name: 'Bundler Audit'
+        if: ${{ inputs.language == 'Ruby' && inputs.perform-complexity-checks == true }}
         uses: andrewmcodes/bundler-audit-action@main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      
-  go-language-specific-precompilation-checks:
-    name: 'Go-specific pre-compilation steps'  
-    if: ${{ inputs.language == 'Go' && inputs.perform-complexity-checks == true }}
-    runs-on: ubuntu-latest
-    needs: run-scc
-    steps:
-      - name: Run go linter
-        run: echo 'go linter'
-        # https://github.com/marketplace/actions/gosec-security-checker      
+        # TODO: get with Marc/Prajakta on this sequence for Ruby uses: chef/common-github-actions/.github/workflows/rubocop.yml@main
+      - name: 'Go-specific pre-compilation steps and linting'  
+        if: ${{ inputs.language == 'Go' && inputs.perform-complexity-checks == true }}
+        run: |
+          echo 'go linter'
+        # TODO: https://github.com/marketplace/actions/gosec-security-checker      
           # go install github.com/securego/gosec/v2/cmd/gosec@latest
           # GHA at https://github.com/securego/gosec
           # gosec ./... >> ./bin/gosec.out
@@ -264,16 +272,9 @@ jobs:
         # staticcheck ./... >> ./bin/staticcheck.out
 
   # language-agnostic secrity check tools (OWASP dep-check)
-  language-agnostic-precompilation-checks:
-    # https://github.com/marketplace/actions/dependency-check & https://owasp.org/www-project-dependency-check/ 
-    #     and flags at https://jeremylong.github.io/DependencyCheck/dependency-check-cli/arguments.html
-    if: ${{ inputs.perform-complexity-checks == true }}
-    runs-on: ubuntu-latest
-    name: 'Language-agnostic pre-compilation steps'  
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: OWASP Dependency check
+  # https://github.com/marketplace/actions/dependency-check & https://owasp.org/www-project-dependency-check/ 
+  #     and flags at https://jeremylong.github.io/DependencyCheck/dependency-check-cli/arguments.html
+      - name: 'Language-agnostic pre-compilation steps (OWASP dependency check)'  
         uses: dependency-check/Dependency-Check_Action@main
         with:
           project: $REPO_NAME
@@ -300,29 +301,31 @@ jobs:
   
   # # security scans
   run-trufflehog:
+    name: 'Trufflehog scan'
     if: ${{ inputs.perform-trufflehog-scan == true }}
     uses: chef/common-github-actions/.github/workflows/trufflehog.yml@main
-    needs: run-scc
+    needs: precompilation-checks
 
   # run-srcclr:
   #   if: ${{ inputs.perform-srcclr-scan == true }}
   #   uses: chef/common-github-actions/.github/workflows/srcclr.yml@main
   #   needs: run-scc
 
-  run-veracode-sca:
-    if: ${{ inputs.perform-veracode-sca-scan == true }}
-    uses: chef/common-github-actions/.github/workflows/veracode-sca.yml@main
-    needs: run-scc
-    secrets: inherit
+  # run-veracode-sca:
+  #   if: ${{ inputs.perform-veracode-sca-scan == true }}
+  #   uses: chef/common-github-actions/.github/workflows/veracode-sca.yml@main
+  #   needs: run-scc
+  #   secrets: inherit
       
   # # BLACKDUCK TOOLS
   # # updated to https://documentation.blackduck.com/bundle/bridge/page/documentation/c_download.html#polaris-download
   # # https://github.com/marketplace/actions/black-duck-security-scan
   # # for polaris, coverity, SRM (SBOM), and SCA (BlackDuck SCA) - Chef uses polaris and SBOM later in this script
   run-blackduck-sca:
+    name: 'BlackDuck SCA scan'
     if: ${{ inputs.perform-blackduck-sca-scan == true }}
     uses: chef/common-github-actions/.github/workflows/blackduck-sca.yml@main
-    needs: run-scc
+    needs: precompilation-checks
     secrets: inherit 
             
   # ################################################################################################################
@@ -332,9 +335,9 @@ jobs:
   # ################################################################################################################
   
   ci-build:
+    name: 'Build and compilation'
     if : ${{ inputs.build == true }}
-    needs: language-agnostic-precompilation-checks
-    name: 'CI build and compilation steps'
+    needs: precompilation-checks
     runs-on: ubuntu-latest
     steps:
       - name: BUILD
@@ -371,25 +374,6 @@ jobs:
     #   run: go test -v -coverprofile="coverage.out" ./... 
     # - name: Copy file
     #   run: mkdir -p test/coverage; cp coverage.out test/coverage/coverage.out
-
-  # ci-package-binary:
-  #   if: ${{ inputs.build == true && success() }}
-  #   runs-on: ubuntu-latest
-  #   needs: ci-build
-  #   name: 'CI package binary steps'  
-  #   steps:
-  #     - name: Package for Rust binary
-  #       if: ${{ inputs.language == 'Rust' }}
-  #       run: echo 'hello world'
-  #       # cargo package --target-dir ./bin
-  #     - name: Package for Ruby binary
-  #       if: ${{ inputs.language == 'Ruby' }}
-  #       run: echo 'hello world'
-  #       # bundle exec rake package
-  #     - name: Package for Go binary
-  #       if: ${{ inputs.language == 'Go' }}
-  #       run: echo 'hello world'
-  #       # go build -o ./bin/chef-api ./cmd/chef-api/main.go
           
   # ################################################################################################################
   # #
@@ -398,8 +382,10 @@ jobs:
   # ################################################################################################################
   
   ci-unit-test: # FROM CHEF-VAULT
-    if: ${{ inputs.unit-tests == true && success() }}
-    name: 'Unittest'
+  # TODO: add language-specific unit tests
+    name: 'Unit tests'
+    if: ${{ inputs.unit-tests == true && success() && inputs.language == 'Ruby' }}
+    needs:  ci-build
     strategy:
       fail-fast: false
       matrix:
@@ -459,33 +445,79 @@ jobs:
          
   # ################################################################################################################
   # #
-  # #    Security DAST tests and scans
+  # #    Security SAST tests and scans
   # #
   # ################################################################################################################
   
-  security-dast-tests-sonar-public:
-    name: 'Security DAST tests and scans - Sonar on PUBLIC repo'
-    if: ${{ inputs.perform-sonarqube-sca-scan == true && success() && inputs.visibility == 'public'}}
+  Sonar-SAST-public:
+    name: 'PUBLIC Sonar SAST scan'
     needs: ci-build
+    if: ${{ inputs.perform-sonarqube-sca-scan == true && success() && inputs.visibility == 'public'}}
     uses: chef/common-github-actions/.github/workflows/sonarqube-public-repo.yml@main
     secrets: inherit
-    
-  security-dast-tests-sonar-private:
-    name: 'Security DAST tests and scans - Sonar on PRIVATE repo'
+    with:
+      perform-build: $${ inputs.perform-sonar-build }
+      build-profile: $${ inputs.build-profile }
+      language: ${ inputs.language }
+      report-unit-test-coverage: ${ inputs.report-unit-test-coverage }
+      report-to-atlassian-dashboard: ${ inputs.report-to-atlassian-dashboard }
+      quality-product-name: $${ inputs.quality-product-name }
+      quality-sonar-app-name: $${ inputs.quality-sonar-app-name }
+      quality-testing-type: $${ inputs.quality-testing-type }
+      quality-service-name: $${ inputs.quality-service-name }
+      quality-junit-report: $${ inputs.quality-junit-report }
+      visibility: $${ inputs.visibility }
+      go-private-modules: $${ inputs.go-private-modules }
+      udf1: $${ inputs.udf1 }
+      udf2: $${ inputs.udf2 }
+      udf3: $${ inputs.udf3 }
+        
+  Sonar-SAST-private:
+    name: 'PRIVATE Sonar scan'
     if: ${{ inputs.perform-sonarqube-sca-scan == true && success() && inputs.visibility == 'private'}}
     needs: ci-build
     uses: chef/common-github-actions/.github/workflows/sonarqube-private-repo.yml@main
     secrets: inherit
+    with:
+      perform-build: $${ inputs.perform-sonar-build }
+      build-profile: $${ inputs.build-profile }
+      language: ${ inputs.language }
+      report-unit-test-coverage: ${ inputs.report-unit-test-coverage }
+      report-to-atlassian-dashboard: ${ inputs.report-to-atlassian-dashboard }
+      quality-product-name: $${ inputs.quality-product-name }
+      quality-sonar-app-name: $${ inputs.quality-sonar-app-name }
+      quality-testing-type: $${ inputs.quality-testing-type }
+      quality-service-name: $${ inputs.quality-service-name }
+      quality-junit-report: $${ inputs.quality-junit-report }
+      visibility: $${ inputs.visibility }
+      go-private-modules: $${ inputs.go-private-modules }
+      udf1: $${ inputs.udf1 }
+      udf2: $${ inputs.udf2 }
+      udf3: $${ inputs.udf3 }
   
-  security-dast-tests-sonar-internal:
-    name: 'Security DAST tests and scans - Sonar on INTERNAL repo'
+  Sonar-SAST-internal:
+    name: 'INTERNAL Sonar scan'
     if: ${{ inputs.perform-sonarqube-sca-scan == true && success() && inputs.visibility == 'internal'}}
     needs: ci-build
     uses: chef/common-github-actions/.github/workflows/sonarqube-internal-repo.yml@main
     secrets: inherit
-
-        # TODO: use the visibility of repo, so that we can GO_PRIVATE with secrets.GITHUB_TOKEN and set right runner for SQ on SONAR_TOKEN - public: ubuntu-latest-4-cores, private: ip-range-controlled
-            
+    with:
+      perform-build: $${ inputs.perform-sonar-build }
+      build-profile: $${ inputs.build-profile }
+      language: ${ inputs.language }
+      report-unit-test-coverage: ${ inputs.report-unit-test-coverage }
+      report-to-atlassian-dashboard: ${ inputs.report-to-atlassian-dashboard }
+      quality-product-name: $${ inputs.quality-product-name }
+      quality-sonar-app-name: $${ inputs.quality-sonar-app-name }
+      quality-testing-type: $${ inputs.quality-testing-type }
+      quality-service-name: $${ inputs.quality-service-name }
+      quality-junit-report: $${ inputs.quality-junit-report }
+      visibility: $${ inputs.visibility }
+      go-private-modules: $${ inputs.go-private-modules }
+      udf1: $${ inputs.udf1 }
+      udf2: $${ inputs.udf2 }
+      udf3: $${ inputs.udf3 }
+      
   # # older tool no longer used in Progress
   # # run-blackduck-coverity:
   # #   if: ${{ inputs.perform-blackduck-coverity == true }}
@@ -498,10 +530,65 @@ jobs:
     uses: chef/common-github-actions/.github/workflows/blackduck-polaris.yml@main
     needs: ci-build
     secrets: inherit
+    
+  # ################################################################################################################
+  # #
+  # #    TODO: Add packaging steps – rpm, deb, MSI, dpkg + signing + SHA)
+  # #
+  # ################################################################################################################
+    
+  package-binary:
+    name: 'Creating packaged binaries'
+    runs-on: ubuntu-latest
+    needs: ci-build
+    steps:
+      - name: 'Create packaged binaries'
+        if: ${{ success() && inputs.package-binaries == true }}
+        run: echo "Creating packaged binaries"
+  # TODO: add flag for any params needed
 
-  # generate bills-of-materials
-  calculate-sbom:
+  # ################################################################################################################
+  # #
+  # #    TODO: Add habitat build steps from plan.sh for various packages/platforms/machine archs, publish to Builder
+  # #
+  # ################################################################################################################
+       
+  habitat-build:
+    name: 'Creating Habitat packages'
+    runs-on: ubuntu-latest
+    needs: package-binary
+    steps:
+      - name: 'Create Habitat packages'
+        if: ${{ success() && inputs.habitat-build == true }}
+        run: echo "Creating Habitat packages"
+  # TODO: add flag for any params needed
+
+  # ################################################################################################################
+  # #
+  # #    TODO: Add binary publishing steps – container from Dockerfile to ECR, go-releaser binary to releases page, 
+  # #       omnibus to artifactory, gems, choco, homebrew, other app stores
+  # #
+  # ################################################################################################################
+
+  publish:
+    name: 'Publishing packages'
+    runs-on: ubuntu-latest
+    needs: habitat-build
+    steps:
+      - name: 'Publishing packages'
+        if: ${{ success() && inputs.publish-packages == true }}
+        run: echo "Publishing packages"
+  # TODO: add flag for any params needed
+
+  #### TODO: add flags here!!! MSFT, license scout, GH export, etc...
+  generate-sbom:
     if: ${{ inputs.generate-sbom == true }}
     uses: chef/common-github-actions/.github/workflows/sbom.yml@main
     needs: ci-build
     secrets: inherit
+    with:
+      export-github-sbom: $${ inputs.export-github-sbom }
+      generate-blackduck-polaris-sbom: $${ inputs.generate-blackduck-polaris-sbom }
+      generate-msft-sbom: $${ inputs.generate-msft-sbom }
+      license_scout: $${ inputs.license_scout }
+      go-private-modules: ${{ inputs.go-private-modules }}
